--- a/uimodule/ui5.yaml
+++ b/uimodule/ui5.yaml
@@ -10,9 +10,10 @@ framework:
   name: SAPUI5
   version: 1.84.0
   libraries:
-    - name: sap.ui.core
     - name: sap.m
+    - name: sap.ui.core
     - name: sap.ui.layout
+    - name: sap.viz
     - name: themelib_sap_fiori_3
 server:
   customMiddleware:
